productos por  API y detalle
se  arreglaron varios detalles esteticos y se cargan todos los productos por por API

--- a/contacto.html
+++ b/contacto.html
@@ -90,7 +90,7 @@
         
         <footer>
             <div class="itmesfooter">
-                <div class="EnlacesFooter">Derechos&Reservados</div>
+                <div class="EnlacesFooter">Derechos Reservados</div>
                 <div class="EnlacesFooter">
                     <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
                     <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
