--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
                 </ul>
             </nav>
-            <section></section>
+            <!-- <section></section> -->
         </header>
 
 
@@ -76,7 +76,7 @@
         </ul>
         <script src="js/apiGetLocal.js"></script>
         <script>
-                traer()
+                traer("clientes")
         </script>
 
 
