--- a/productos.html
+++ b/productos.html
@@ -46,203 +46,59 @@
     </header>
 
 
-
+    <script src="js/apiGetLocal.js"></script>
     <div class="tipo-prod">
         <h4 id="papeleria">Paeleria</h4>
         <hr>
-        <h5 id="cuadernos">Cuadernos</h5>
+        <h5>Cuadernos</h5>
         <hr>
-        <div class="subtipo-prod">
-            <div class="item-prod">
-                <img src="Imagenes/cuaderno_1.webp" alt="item 1">
-                <p class="precio-prod">$ 1250</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Cuaderno 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
+        <div  id="cuadernos" class="subtipo-prod">
+            <script>
+                traer("cuadernos")
+        </script>
         </div>
-        <h5 id="libretas">Libretas</h5>
+        <h5>Libretas</h5>
         <hr>
-        <div class="subtipo-prod">
-            <div class="item-prod">
-                <img src="Imagenes/Libreta_1.webp" alt="item 1">
-                <p class="precio-prod">$ 2350</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Libreta 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
+        <div  id="libretas" class="subtipo-prod">
+            <script>
+                traer("libretas")
+        </script>
         </div>
-        <h5 id="resmas">Resmas</h5>
+        <h5>Resmas</h5>
         <hr>
-        <div class="subtipo-prod">
-            <div class="item-prod">
-                <img src="Imagenes/Resma_1.webp" alt="item 1">
-                <p class="precio-prod">$ 1900</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Resma 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
+        <div  id="resmas" class="subtipo-prod">
+            <script>
+                traer("resmas")
+         </script>
         </div>
     </div>
     <div class="tipo-prod">
         <h4 id="escritura">Escritura</h4>
         <hr>
-        <h5 id="marcadores">Marcadores</h5>
+        <h5>Marcadores</h5>
         <hr>
-        <div class="subtipo-prod">
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/marcado_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
+        <div  id="marcadores" class="subtipo-prod"></div>
+            <script>
+                    traer("marcadores")
+            </script>
         </div>
-        <h5 id="lapices">Lapices</h5>
+        <h5>Lapices</h5>
         <hr>
-        <div class="subtipo-prod">
-            <div class="item-prod">
-                <img src="Imagenes/Lapices_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/Lapices_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/Lapices_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/Lapices_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/Lapices_1.webp" alt="item 1">
-                <p class="precio-prod">$ 250</p>
-                <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
+        <div id="lapices" class="subtipo-prod">
+            <script>
+                traer("lapices")
+            </script>
         </div> 
-        <h5 id="biromes">Biromes</h5>
+        <h5>Biromes</h5>
         <hr>
-        <div class="subtipo-prod">
-            <div class="item-prod">
-                <img src="Imagenes/birome_1.webp" alt="item 1">
-                <p class="precio-prod">$ 1900</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Birome 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/birome_2.webp" alt="item 1">
-                <p class="precio-prod">$ 1900</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Birome 2</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/birome_3.webp" alt="item 1">
-                <p class="precio-prod">$ 1900</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Birome 3</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-            <div class="item-prod">
-                <img src="Imagenes/birome_4.webp" alt="item 1">
-                <p class="precio-prod">$ 1900</p>
-                <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
-                <h6>Birome 4</h6>
-                <p class="detalle-prod">descripcion del producto</p>
-            </div>
-        </div>
+        <div id="biromes" class="subtipo-prod">
+            <script>
+                    traer("biromes")
+            </script>
+          </div>
     </div>
-    <hr>
-    <h4>Que me falta</h4>
-    <ul>
-        <li>mejorar el diseño y la separaciòn de titulo y 
-            subtitulo de cada categoria
-        </li>
-        <li>
-            mejorar el diseño del nombre del producto 
-            y de la descripcion
-        </li>
-        <li>
-            poner un cambio de color en el focus del boton
-        </li>
-        <li>
-            asignar algo al boton de compra
-        </li>
-    </ul>
+  
+
     
 <footer>
     <div class="itmesfooter">
