Correcciones de ortografía
En varios archivos

--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
                     <!-- Categorias -->
                     <li> <a href="/productos.html">Productos</a>
                         <ul>
-                            <li><a href="/productos.html#papeleria">Papeleria</a>
+                            <li><a href="/productos.html#papeleria">Papelería</a>
                                 <ul>
                                     <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
                                     <li><a href="/productos.html#libretas">Libretas</a></li>
@@ -47,7 +47,7 @@
                     </li>
 
                     <!-- Enlaces en nav -->
-                    <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
+                    <li><a href="nosotros.html" class="nav-enlaces">Quiénes somos</a></li>
                     <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
                 </ul>
             </nav>
@@ -62,7 +62,7 @@
                 <div class="column-half">
                   <h2>Mandanos tu consulta</h2>
                   <p>Ya seas un cliente o solo estás acá para mirar, si tenés alguna pregunta o consulta no dudes en completar el formulario y nos pondremos en contacto con vos a la brevedad.</p>
-                  <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi iure voluptates vel debitis, dolores perferendis dignissimos temporibus! Architecto non voluptates necessitatibus delectus eligendi! Itaque, ad.</p> -->
+
                 </div>
                 <div class="column-half">
                   <h3>Formulario de Contacto</h3>
@@ -97,7 +97,7 @@
                     <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
                 </div>
                 <div class="EnlacesFooter">
-                    <a href="nosotros.html">Quienes somos</a>
+                    <a href="nosotros.html">Quiénes somos</a>
                 </div>
             </div>
             
