--- a/nosotros.html
+++ b/nosotros.html
@@ -27,7 +27,7 @@
                 <!-- Categorias -->
                 <li> <a href="/productos.html">Productos</a>
                     <ul>
-                        <li><a href="/productos.html#papeleria">Papeleria</a>
+                        <li><a href="/productos.html#papeleria">Papelería</a>
                             <ul>
                                 <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
                                 <li><a href="/productos.html#libretas">Libretas</a></li>
@@ -45,13 +45,13 @@
                 </li>
 
                 <!-- Enlaces en nav -->
-                <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
+                <li><a href="nosotros.html" class="nav-enlaces">Quiénes somos</a></li>
                 <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <h2>Beinvenidos a El Mercado de las Lapiceras</h2>
+    <h2>Bienvenidos a El Mercado de las Lapiceras</h2>
 <p>
     Somos una joven empresa importadora y distribuidora de artículos de librería comercial de calidad. Tenemos varias sucursales ubicadas en CABA, pero nuestros productos llegan a todo el país. Contamos con atención personalizada y customizada para poder brindarte el mejor servicio, tanto en ventas al canal mayorista como al canal minorista. Te ofrecemos esta plataforma digital para tu comodidad y conveniencia.
 </p>
@@ -62,16 +62,19 @@
     Disponemos de una gran variedad de productos en diferentes rubros. Además, trabajamos con insumos de alta calidad, lo que brinda una gran confianza a nuestros clientes.
 </p>
 <p>
-    Podes conocer nuestra tienda completa <a href="/productos.html">aqui</a>.
+    Podés conocer nuestra tienda completa <a href="/productos.html">aqui</a>.
 </p>
 <p>
     Por otro lado, trabajamos con venta por menor y por mayor en toda la web. Además, disponemos de diferentes métodos de pago en nuestra tienda.
 </p>
 <p>
-Adicionalmente, trabajamos con algunos métodos de envíos para los distintos rubros. También, incluimos metodo de envío gratis con compras que superen ciertos importes. Aprovechalo ahora!
+    Adicionalmente, trabajamos con algunos métodos de envíos para los distintos rubros. También, incluimos metodo de envío gratis con compras que superen ciertos importes. ¡Aprovechalo ahora!
 </p>
 <p>
-Para finalizar, te dejamos un link para que visites nuestra <a href="/contacto.html">sección de contacto</a>. Allí podrás realizarnos cualquier consulta que tengas, y te responderemos a la brevedad. No esperes mas, y hace que grupoTAM sea el proveedor de tu empresa. Comunicate hoy!
+    Para finalizar, te dejamos un link para que visites nuestra <a href="/contacto.html">sección de contacto</a>. Allí podrás realizarnos cualquier consulta que tengas, y te responderemos a la brevedad.
+</p>
+<p>
+    No esperes más, y hacé que <a href="index.html">El Mercado de las Lapiceras</a> sea el proveedor de tu empresa. ¡Comunicate hoy!
 </p>
     <h2>
         Nuestras sucursales
@@ -89,7 +92,8 @@ Para finalizar, te dejamos un link para que visites nuestra <a href="/contacto.h
                 <li>Lun. a Vie. de 9 a 17h</li>
                 <li>Tel: 011 1234-5678</li>
             </ul>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.666579074077!2d-58.45880938423789!3d-34.561996462799854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d3849c3221%3A0xc8999711cc581a5b!2sAv.%20Cabildo%20%26%20Av.%20Juramento%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1665868000313!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </li>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.666579074077!2d-58.45880938423789!3d-34.561996462799854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5d3849c3221%3A0xc8999711cc581a5b!2sAv.%20Cabildo%20%26%20Av.%20Juramento%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1665868000313!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+        </li>
         <li>    <h3>Sucursal Devoto</h3>
             <ul>
                 <li>Lun. a Vie. de 9 a 17h</li>
@@ -109,7 +113,7 @@ Para finalizar, te dejamos un link para que visites nuestra <a href="/contacto.h
                 <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
             </div>
             <div class="EnlacesFooter">
-                <a href="nosotros.html">Quienes somos</a>
+                <a href="nosotros.html">Quiénes somos</a>
             </div>
         </div>
         
