--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
                 <!-- Categorias -->
                 <li> <a href="/productos.html">Productos</a>
                     <ul>
-                        <li><a href="/productos.html#papeleria">Papeleria</a>
+                        <li><a href="/productos.html#papeleria">Papelería</a>
                             <ul>
                                 <li><a href="/productos.html#cuadernos">Cuadernos</a></li>
                                 <li><a href="/productos.html#libretas">Libretas</a></li>
@@ -39,7 +39,7 @@
                 </li>
 
                 <!-- Enlaces en nav -->
-                <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
+                <li><a href="nosotros.html" class="nav-enlaces">Quiénes somos</a></li>
                 <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
             </ul>
         </nav>
@@ -48,7 +48,7 @@
 
 
     <div class="tipo-prod">
-        <h4 id="papeleria">Paeleria</h4>
+        <h4 id="papeleria">Papelería</h4>
         <hr>
         <h5 id="cuadernos">Cuadernos</h5>
         <hr>
@@ -58,7 +58,7 @@
                 <p class="precio-prod">$ 1250</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Cuaderno 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
         </div>
         <h5 id="libretas">Libretas</h5>
@@ -69,7 +69,7 @@
                 <p class="precio-prod">$ 2350</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Libreta 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
         </div>
         <h5 id="resmas">Resmas</h5>
@@ -80,7 +80,7 @@
                 <p class="precio-prod">$ 1900</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Resma 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
         </div>
     </div>
@@ -95,102 +95,102 @@
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/marcado_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
                 <h6>Nombre 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
         </div>
-        <h5 id="lapices">Lapices</h5>
+        <h5 id="lapices">Lápices</h5>
         <hr>
         <div class="subtipo-prod">
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <h6>Lápiz 1</h6>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <h6>Lápiz 1</h6>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <h6>Lápiz 1</h6>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <h6>Lápiz 1</h6>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/Lapices_1.webp" alt="item 1">
                 <p class="precio-prod">$ 250</p>
                 <button class="btn-compra" title="click para comprar" onclick="">Comprar</button>
-                <h6>Lapiz 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <h6>Lápiz 1</h6>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
         </div> 
         <h5 id="biromes">Biromes</h5>
@@ -201,28 +201,28 @@
                 <p class="precio-prod">$ 1900</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Birome 1</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/birome_2.webp" alt="item 1">
                 <p class="precio-prod">$ 1900</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Birome 2</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/birome_3.webp" alt="item 1">
                 <p class="precio-prod">$ 1900</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Birome 3</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
             <div class="item-prod">
                 <img src="Imagenes/birome_4.webp" alt="item 1">
                 <p class="precio-prod">$ 1900</p>
                 <button class="btn-compra" title="click para comprar" onclick="Form-compra.html">Comprar</button>
                 <h6>Birome 4</h6>
-                <p class="detalle-prod">descripcion del producto</p>
+                <p class="detalle-prod">descripción del producto</p>
             </div>
         </div>
     </div>
@@ -253,7 +253,7 @@
             <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
         </div>
         <div class="EnlacesFooter">
-            <a href="nosotros.html">Quienes somos</a>
+            <a href="nosotros.html">Quiénes somos</a>
         </div>
     </div>
     
