--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <!-- Categorias -->
                     <li> <a href="productos.html">Productos</a>
                         <ul>
-                            <li><a href="productos.html#papeleria">Papeleria</a>
+                            <li><a href="productos.html#papeleria">Papelería</a>
                                 <ul>
                                     <li><a href="productos.html#cuadernos">Cuadernos</a></li>
                                     <li><a href="productos.html#libretas">Libretas</a></li>
@@ -51,7 +51,7 @@
                     </li>
 
                     <!-- Enlaces en nav -->
-                    <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
+                    <li><a href="nosotros.html" class="nav-enlaces">Quiénes somos</a></li>
                     <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
                 </ul>
             </nav>
@@ -70,7 +70,7 @@
         <!-- Termina el carrousel -->
 
         
-        <h2>Clientes que Confian en nosotros</h2>
+        <h2>Clientes que Confían en nosotros</h2>
         <ul id="clientesLogo" class="ClientesRegulares"> <!-- class="ClientesRegulares" -->
 
         </ul>
@@ -92,7 +92,7 @@
                     <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
                 </div>
                 <div class="EnlacesFooter">
-                    <a href="nosotros.html">Quienes somos</a>
+                    <a href="nosotros.html">Quiénes somos</a>
                 </div>
             </div>
 
