Corrección de error de ortografía

--- a/nosotros.html
+++ b/nosotros.html
@@ -51,7 +51,7 @@
             </ul>
         </nav>
     </header>
-    <article class="wellcome">
+    <article class="welcome">
         <h2>Bienvenidos a El Mercado de las Lapiceras</h2>
             <p>
                 Somos una joven empresa importadora y distribuidora de artículos de librería comercial de calidad. Tenemos varias sucursales ubicadas en CABA, pero nuestros productos llegan a todo el país. Contamos con atención personalizada y customizada para poder brindarte el mejor servicio, tanto en ventas al canal mayorista como al canal minorista. Te ofrecemos esta plataforma digital para tu comodidad y conveniencia.
