--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/MenuHamb.css">
         <link rel="stylesheet" href="css/slider.css">
         
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
         <title>Proyecto CaC</title>
@@ -20,42 +20,42 @@
     </head>
     <body>
         <header>
-                <div class="contenedor">
-                    <!-- Logo -->
-                    <p> <img class="logo" src="Imagenes/Logo.jpg" alt="Logo Mercado de las Lapiceras">
-                    </p>
-                    <input type="checkbox" id="menu-check">
-                    <label id="menu" for="menu-check">
-                        <span id="menu-abrir">&#9776;</span>
-                        <span id="menu-cerrar">X</span>
+            <!-- <nav class="NavBar"> -->
+            <nav class="nav">
+                <ul class="menu-horizontal">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa-solid fa-bars"></i>
                     </label>
-                    <nav>
-                        <ul class="menu-horizontal"> <!-- id="menuH" -->
-                            <li class="menu"><a href="index.html" class="nav-enlaces">Home</a></li>
-                            <li class="menu"> <a href="productos.html">Productos</a>
+                    <!-- Logo -->
+                    <li><a title="Logo" href="index.html"> <img src="Imagenes/Logo.jpg" alt="Logo Mercado de las Lapiceras" class="logo"></a></li>
+
+                    <!-- Categorias -->
+                    <li> <a href="productos.html">Productos</a>
+                        <ul>
+                            <li><a href="productos.html#papeleria">Papeleria</a>
                                 <ul>
-                                    <li><a href="productos.html#papeleria">Papeleria</a>
-                                        <ul>
-                                            <li><a href="productos.html#cuadernos">Cuadernos</a></li>
-                                            <li><a href="productos.html#libretas">Libretas</a></li>
-                                            <li><a href="productos.html#resmas">Resmas</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="productos.html#escritura">Escritura</a>
-                                        <ul>
-                                            <li><a href="productos.html#marcadores">Marcadores</a></li>
-                                            <li><a href="productos.html#lapices">Lápices</a></li>
-                                            <li><a href="productos.html#biromes">Biromes</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="productos.html#cuadernos">Cuadernos</a></li>
+                                    <li><a href="productos.html#libretas">Libretas</a></li>
+                                    <li><a href="productos.html#resmas">Resmas</a></li>
                                 </ul>
                             </li>
-                            <li class="menu"><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
-                            <li class="menu"><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
+                            <li><a href="productos.html#escritura">Escritura</a>
+                                <ul>
+                                    <li><a href="productos.html#marcadores">Marcadores</a></li>
+                                    <li><a href="productos.html#lapices">Lápices</a></li>
+                                    <li><a href="productos.html#biromes">Biromes</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </nav>
-                </div>
-            
+                    </li>
+
+                    <!-- Enlaces en nav -->
+                    <li><a href="nosotros.html" class="nav-enlaces">Quienes somos</a></li>
+                    <li><a href="contacto.html" class="nav-enlaces">Contacto</a></li>
+                </ul>
+            </nav>
+            <!-- <section></section> -->
         </header>
 
 
@@ -85,7 +85,7 @@
 
         <footer>
             <div class="itmesfooter">
-                <div class="EnlacesFooter">Derechos Reservados</div>
+                <div class="EnlacesFooter">Derechos&Reservados</div>
                 <div class="EnlacesFooter">
                     <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
                     <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
