errores de ortografia

--- a/nosotros.html
+++ b/nosotros.html
@@ -116,7 +116,7 @@
 
     <footer>
         <div class="itmesfooter">
-            <div class="EnlacesFooter">Derechos Reservados</div>
+            <div class="EnlacesFooter">Contenido de prueba academica</div>
             <div class="EnlacesFooter">
                 <div class="Redes">
                     <a href="https://wa.me/541167142056" target="_blank"> 
