--- a/productos.html
+++ b/productos.html
@@ -103,19 +103,19 @@
   
 
     
-<footer>
-    <div class="itmesfooter">
-        <div class="EnlacesFooter">Contenido de prueba academica</div>
-        <div class="EnlacesFooter">
-            <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
-            <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
-            <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
+    <footer>
+        <div class="itmesfooter">
+            <div class="EnlacesFooter" id="linkleft">Prueba academica</div>
+            <div class="EnlacesFooter">
+                <div class="Redes"><a href="https://wa.me/541167142056" target="_blank"> <img src="Imagenes/WhatsAppLogo.ico" height="20px"></a></div>
+                <div class="Redes"><a href="https://facebook.com" target="_blank"> <img src="Imagenes/FacebookLogo.ico" height="20px"></a></div>
+                <div class="Redes"><a href="https://instagram.com" target="_blank"> <img src="Imagenes/InstagramLogo.ico" height="20px"></a></div>
+            </div>
+            <div class="EnlacesFooter" id="linkrigth">
+                <a href="nosotros.html">Quiénes somos</a>
+            </div>
         </div>
-        <div class="EnlacesFooter">
-            <a href="nosotros.html">Quiénes somos</a>
-        </div>
-    </div>
-    
-</footer>
+
+    </footer>
 </body>
 </html>
