--- a/nosotros.html
+++ b/nosotros.html
@@ -56,7 +56,7 @@
     
 </header>
  
-    <article class="wellcome">
+    <article class="welcome">
         <h2>Bienvenidos a El Mercado de las Lapiceras</h2>
             <p>
                 Somos una joven empresa importadora y distribuidora de artículos de librería comercial de calidad. Tenemos varias sucursales ubicadas en CABA, pero nuestros productos llegan a todo el país. Contamos con atención personalizada y customizada para poder brindarte el mejor servicio, tanto en ventas al canal mayorista como al canal minorista. Te ofrecemos esta plataforma digital para tu comodidad y conveniencia.
@@ -111,8 +111,8 @@
             </ul>
             <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.1441173748753!2d-58.5053770842369!3d-34.60051706483677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb632284397c9%3A0x18894717f245ea40!2sAv.%20Francisco%20Beir%C3%B3%20%26%20Av.%20Lincoln%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1665867355201!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">Mapa sucursal Devoto</iframe>
         </li>
-    </ul> 
-
+    </ul>
+    
 
     <footer>
         <div class="itmesfooter">
