--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="shortcut icon" href="Imagenes/Marcadores.ico" type="image/x-icon">
-
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
         <!-- link a archivos css -->
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/MenuHamb.css">
         <link rel="stylesheet" href="css/slider.css">
         
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-
-
         <title>Proyecto CaC</title>
 
     </head>
