ajuste de los logos en vista PC y celular

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     </label>
                     <nav>
                         <ul class="menu-horizontal"> <!-- id="menuH" -->
-                            <li class="menu"><a href="index.html" class="nav-enlaces">Home</a></li>
+                            <li class="menu"><a href="index.html" class="nav-enlaces"><img class="logomenu" src="Imagenes/Logo.jpg" alt="Logo Mercado de las Lapiceras"></a></li>
+                            <li class="menu" id="home-menu"><a href="index.html" class="nav-enlaces">Home</a></li>
                             <li class="menu"> <a href="productos.html">Productos</a>
                                 <ul>
                                     <li><a href="productos.html#papeleria">Papeleria</a>
