agrego el whatsapp de ituran

--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
             </div>
 
         </footer>
+        <script type="text/javascript" src="https://api.clientify.net/web-marketing/chatbots/script/198213.js"></script>
     </body>
 </html>
